// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fails with bad request 1`] = `[Error: Failed to fetch remote icon set at "https://localhost/bad"]`;

exports[`fails with bad request 2`] = `
[
  0,
  {},
  {},
]
`;

exports[`fails with network error 1`] = `[Error: Failed to fetch remote icon set at "https://localhost/error"]`;

exports[`fails with network error 2`] = `
[
  0,
  {},
  {},
]
`;

exports[`works with http 1`] = `
[
  0,
  {},
  {
    "fb746dac53d593f1621f8558482e2bd4e23b5749.json": [
      1,
      {},
      Uint8Array [
        123,
        34,
        112,
        114,
        101,
        102,
        105,
        120,
        34,
        58,
        34,
        240,
        159,
        148,
        165,
        34,
        44,
        34,
        105,
        110,
        102,
        111,
        34,
        58,
        123,
        34,
        110,
        97,
        109,
        101,
        34,
        58,
        34,
        240,
        159,
        146,
        175,
        34,
        125,
        44,
        34,
        105,
        99,
        111,
        110,
        115,
        34,
        58,
        123,
        34,
        105,
        99,
        111,
        110,
        34,
        58,
        123,
        34,
        98,
        111,
        100,
        121,
        34,
        58,
        34,
        34,
        125,
        125,
        44,
        34,
        119,
        105,
        100,
        116,
        104,
        34,
        58,
        50,
        52,
        44,
        34,
        104,
        101,
        105,
        103,
        104,
        116,
        34,
        58,
        50,
        52,
        125,
      ],
    ],
  },
]
`;

exports[`works with https 1`] = `
[
  0,
  {},
  {
    "8cc51bd38ea66f433eaf69fa37a2cd34a48601ec.json": [
      1,
      {},
      Uint8Array [
        123,
        34,
        112,
        114,
        101,
        102,
        105,
        120,
        34,
        58,
        34,
        240,
        159,
        148,
        165,
        34,
        44,
        34,
        105,
        110,
        102,
        111,
        34,
        58,
        123,
        34,
        110,
        97,
        109,
        101,
        34,
        58,
        34,
        240,
        159,
        146,
        175,
        34,
        125,
        44,
        34,
        105,
        99,
        111,
        110,
        115,
        34,
        58,
        123,
        34,
        105,
        99,
        111,
        110,
        34,
        58,
        123,
        34,
        98,
        111,
        100,
        121,
        34,
        58,
        34,
        34,
        125,
        125,
        44,
        34,
        119,
        105,
        100,
        116,
        104,
        34,
        58,
        50,
        52,
        44,
        34,
        104,
        101,
        105,
        103,
        104,
        116,
        34,
        58,
        50,
        52,
        125,
      ],
    ],
  },
]
`;
